[gd_scene load_steps=12 format=3 uid="uid://7qq3vuoceatc"]

[ext_resource type="Script" uid="uid://qpowbr7ro121" path="res://2d/main_scene/menu_2d.gd" id="1_twqau"]
[ext_resource type="Texture2D" uid="uid://bp3p3grp2v7wf" path="res://assets/2d/Imagenes/boton_roto.svg" id="2_boton_roto"]
[ext_resource type="Texture2D" uid="uid://b6c5f21yyqfi1" path="res://assets/2d/Imagenes/texto_terror_simbolos.svg" id="3_6t4me"]
[ext_resource type="Shader" uid="uid://dkm5yab2l76qp" path="res://shaders/crt_shader.gdshader" id="4_8kone"]

[sub_resource type="Gradient" id="Gradient_uhp2f"]
colors = PackedColorArray(0, 0, 0, 1, 0.0840567, 0.0142973, 0.0131769, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_twqau"]
gradient = SubResource("Gradient_uhp2f")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.03, 0.03, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.7, 0.1, 0.1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.8, 0.2, 0.2, 0.8)
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.05, 0.01, 0.01, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.3, 0.03, 0.03, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.4, 0.05, 0.05, 0.4)
shadow_size = 4
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.08, 0.02, 0.02, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.05, 0.05, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.6, 0.1, 0.1, 0.6)
shadow_size = 8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8l6un"]
shader = ExtResource("4_8kone")
shader_parameter/time_speed = 1.0
shader_parameter/flicker_intensity = 0.05
shader_parameter/noise_intensity = 0.02
shader_parameter/distortion_intensity = 0.003

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_p426s"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_twqau")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.01, 0.03, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_twqau")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Jugar" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.9, 0.9, 1)
theme_override_colors/font_color = Color(0.9, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "JUGAR"

[node name="ConfiguracionContainer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 2

[node name="Configuracion" type="Button" parent="VBoxContainer/ConfiguracionContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 0.9, 0.9, 1)
theme_override_colors/font_color = Color(0.9, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "OPCIONES"

[node name="ConfiguracionRota" type="TextureRect" parent="VBoxContainer/ConfiguracionContainer"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_boton_roto")
expand_mode = 1
stretch_mode = 5

[node name="SalirContainer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 2

[node name="Salir" type="Button" parent="VBoxContainer/SalirContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 0.9, 0.9, 1)
theme_override_colors/font_color = Color(0.9, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "SALIR"

[node name="SalirRoto" type="TextureRect" parent="VBoxContainer/SalirContainer"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_boton_roto")
expand_mode = 1
stretch_mode = 5

[node name="MadeByLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.5, 0.5, 0.8)
theme_override_font_sizes/font_size = 16
text = "Made by SquareOne"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TerrorSVG" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 400.0
offset_bottom = 300.0
texture = ExtResource("3_6t4me")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_8l6un")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_p426s")

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/ConfiguracionContainer/Configuracion" to="." method="_on_configuracion_pressed"]
[connection signal="pressed" from="VBoxContainer/SalirContainer/Salir" to="." method="_on_salir_pressed"]
